--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.15",
     "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
