--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/analytics": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
+    "lucide-react": "^0.468.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
